--- a/myportfolio.html
+++ b/myportfolio.html
@@ -1637,7 +1637,7 @@
         <h3 class="project-title">Portfolio Website</h3>
         <p class="project-desc">A personal portfolio built using HTML, CSS, and JavaScript with smooth animations and responsive layout.</p>
         <div class="project-buttons">
-  <a href="http://127.0.0.1:5500/myportfolio.html#home" target="_blank" class="project-btn">🔗 Live Demo</a>
+  <a href="https://sachindantani33.github.io/portfolio-project/myportfolio" target="_blank" class="project-btn">🔗 Live Demo</a>
   <a href="https://github.com/your-repo-link" target="_blank" class="project-btn">💻 View Code</a>
 </div>
 
