--- a/myportfolio.html
+++ b/myportfolio.html
@@ -1644,10 +1644,10 @@
       </div>
       <div class="project-card">
         <div class="project-thumb"></div>
-        <h3 class="project-title">Weather App</h3>
+        <h3 class="project-title">Bootstrapmade Web-Template</h3>
         <p class="project-desc">A live weather app built using JavaScript, Bootstrap, and weather API with animated icons and responsive design.</p>
         <div class="project-buttons">
-  <a href="login-form1.html" target="_blank" class="project-btn">🔗 Live Demo</a>
+  <a href="https://sachindantani33.github.io/web-template/website" class="project-btn">🔗 Live Demo</a>
   <a href="https://github.com/your-repo-link" target="_blank" class="project-btn">💻 View Code</a>
 </div>
 
@@ -1657,7 +1657,7 @@
         <h3 class="project-title">Todo List</h3>
         <p class="project-desc">A task management app built with jQuery and local storage, styled with custom CSS and light/dark mode toggle.</p>
         <div class="project-buttons">
-  <a href="http://127.0.0.1:5500/website.html" target="_blank" class="project-btn">🔗 Live Demo</a>
+  <a href="https://sachindantani33.github.io/portfolio/tcp-website" class="project-btn">🔗 Live Demo</a>
   <a href="https://github.com/your-repo-link" target="_blank" class="project-btn">💻 View Code</a>
 </div>
 
