--- a/myportfolio.html
+++ b/myportfolio.html
@@ -1638,7 +1638,7 @@
         <p class="project-desc">A personal portfolio built using HTML, CSS, and JavaScript with smooth animations and responsive layout.</p>
         <div class="project-buttons">
   <a href="https://sachindantani33.github.io/portfolio-project/myportfolio"  class="project-btn">🔗 Live Demo</a>
-  <a href="https://github.com/your-repo-link" target="_blank" class="project-btn">💻 View Code</a>
+  <a href="https://github.com/sachindantani33/portfolio-project/commit/eb9466c8d853f8254122408d57d451c67aade057" target="_blank" class="project-btn">💻 View Code</a>
 </div>
 
       </div>
@@ -1654,7 +1654,7 @@
       </div>
       <div class="project-card">
         <div class="project-thumb"></div>
-        <h3 class="project-title">Todo List</h3>
+        <h3 class="project-title">TCP Website</h3>
         <p class="project-desc">A task management app built with jQuery and local storage, styled with custom CSS and light/dark mode toggle.</p>
         <div class="project-buttons">
   <a href="https://sachindantani33.github.io/portfolio/tcp-website" class="project-btn">🔗 Live Demo</a>
