--- a/myportfolio.html
+++ b/myportfolio.html
@@ -1329,12 +1329,12 @@
       </div>
       <div class="about-text">
         <h2>About Me</h2>
-        <p>Hello! I'm <strong>Dantani Sachin</strong>, a passionate <em>Web Developer</em> and <em>B.Com student</em> from Kanpur, India.</p>
+        <p>Hello! I'm <strong>Dantani Sachin</strong>, a passionate <em>Web Developer</em> and <em>B.Com student</em> from Mehsana, India.</p>
         <p>I specialize in crafting clean, responsive, and user-friendly web applications. With a strong foundation in both technology and business, I bring a unique perspective to every project I work on.</p>
         <p>When I’m not coding, you’ll find me exploring the latest trends in UI/UX design, experimenting with new JavaScript frameworks, or diving into entrepreneurship ideas.</p>
         <ul class="skills-list">
           <li> Strong fundamentals in <strong>HTML, CSS, JavaScript</strong></li>
-          <li> Experienced with <strong>React</strong> and <strong>jQuery</strong></li>
+          <li> Experienced with <strong>Bootstrap</strong> and <strong>jQuery</strong></li>
           <li> Skilled in <strong>Figma</strong> for UI/UX design</li>
           <li> Basics of <strong>Python</strong> for automation</li>
           <li> Business & tech mindset for scalable solutions</li>
